# wmu-guest-auth

./: .gitignore  90-wmu-guest-preup.sh  90-wmu-guest.sh  Cargo.toml  wmu-guest-auth.initd
reference/: README.md
reference/css/: patterns.css
reference/fonts/: montserrat.css
reference/html/: portal.html  portal.raw.html  wlc-login.html  wlc-login.raw.html
reference/js/: inline-portal-0.js  inline-wlc-login-1.js  inline-wlc-login-2.js  inline-wlc-login-3.js  loginscript.js
reference/js-deobf/: inline-portal-0.js  inline-wlc-login-1.js  inline-wlc-login-3.js  loginscript.js
src/: assets.rs  auth.rs  daemon.rs  dns.rs  error.rs  main.rs  portal.rs  wifi.rs
